--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/common": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "core-js": "^2.4.1",
-    "zone.js": "^0.8.14"
+    "@angular/common": ">=4.2.4",
+    "@angular/core": ">=4.2.4",
+    "@angular/platform-browser": ">=4.2.4",
+    "@angular/platform-browser-dynamic": ">=4.2.4",
+    "core-js": ">=2.4.1",
+    "zone.js": ">=0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.3",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
+    "@angular/cli": ">=1.4.3",
+    "@angular/compiler": ">=4.2.4",
+    "@angular/compiler-cli": ">=4.2.4",
+    "@angular/language-service": ">=4.2.4",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "gulp": "^3.9.1",
