--- a/package.json
+++ b/package.json
@@ -32,20 +32,21 @@
     "@angular/platform-browser": ">=6.1.1",
     "@angular/platform-browser-dynamic": ">=6.1.1",
     "core-js": ">=2.5.7",
+    "tslib": ">=1.9.0",
     "zone.js": ">=0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": ">=6.1.1",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.3",
     "@angular/compiler": ">=6.1.1",
     "@angular/compiler-cli": ">=6.1.1",
     "@angular/language-service": ">=6.1.1",
     "@types/node": ">=10.5.6",
     "codelyzer": ">=4.4.3",
-    "gulp": "^4.0.0",
+    "gulp": ">=4.0.0",
     "rimraf": ">=2.6.2",
     "ts-node": ">=7.0.0",
     "tslint": ">=5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "3.1.1"
   }
 }
