--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular 4",
     "angular 5",
     "angular 6",
+    "angular 7",
     "push notifications",
     "native"
   ],
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-ng-packagr": "~0.11.0",
     "@angular/cli": "7.1.3",
     "@angular/compiler": ">=6.1.1",
     "@angular/compiler-cli": ">=6.1.1",
@@ -44,8 +46,11 @@
     "@types/node": ">=10.5.6",
     "codelyzer": ">=4.4.3",
     "gulp": ">=4.0.0",
+    "ng-packagr": "^4.2.0",
     "rimraf": ">=2.6.2",
     "ts-node": ">=7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": ">=5.11.0",
     "typescript": "3.1.1"
   }
